Updates & synthetic data

--- a/references.bib
+++ b/references.bib
@@ -48,9 +48,9 @@
   keywords = {causal inference,longitudinal data,Quantitative Methods,Social and Behavioral Sciences,within-person},
 }
 
-@article{batesFittingLinearMixedEffects2015,
+@Article{batesFittingLinearMixedEffects2015,
   title = {Fitting {{Linear Mixed-Effects Models Using}} Lme4},
-  author = {Bates, Douglas M. and M{\"a}chler, Martin and Bolker, Ben M. and Walker, Steve},
+  author = {Douglas M. Bates and Martin M{\"a}chler and Ben M. Bolker and Steve Walker},
   year = {2015},
   journal = {Journal of Statistical Software},
   volume = {67},
@@ -58,5 +58,293 @@
   pages = {1--48},
   doi = {10.18637/jss.v067.i01},
   keywords = {\#nosource,Statistics},
-  annotation = {00014}
+  annotation = {00014},
+}
+
+@Article{parrySystematicReviewMetaanalysis2021,
+  ids = {parrySystematicReviewMetaanalysis2021a},
+  title = {A Systematic Review and Meta-Analysis of Discrepancies between Logged and Self-Reported Digital Media Use},
+  author = {Douglas A. Parry and Brittany I. Davidson and Craig J. R. Sewall and Jacob T. Fisher and Hannah Mieczkowski and Daniel S. Quintana},
+  date = {2021-05-17},
+  journaltitle = {Nature Human Behaviour},
+  pages = {1--13},
+  publisher = {{Nature Publishing Group}},
+  issn = {2397-3374},
+  doi = {10.1038/s41562-021-01117-5},
+  url = {https://www.nature.com/articles/s41562-021-01117-5},
+  urldate = {2021-05-24},
+  abstract = {There is widespread public and academic interest in understanding the uses and effects of digital media. Scholars primarily use self-report measures of the quantity or duration of media use as proxies for more objective measures, but the validity of these self-reports remains unclear. Advancements in data collection techniques have produced a collection of studies indexing both self-reported and log-based measures. To assess the alignment between these measures, we conducted a pre-registered meta-analysis of this research. Based on 106 effect sizes, we found that self-reported media use correlates only moderately with logged measurements, that self-reports were rarely an accurate reflection of logged media use and that measures of problematic media use show an even weaker association with usage logs. These findings raise concerns about the validity of findings relying solely on self-reported measures of media use.},
+  langid = {english},
+}
+
+@Article{groszTabooExplicitCausal2020,
+  title = {The {{Taboo Against Explicit Causal Inference}} in {{Nonexperimental Psychology}}},
+  author = {Michael P. Grosz and Julia M. Rohrer and Felix Thoemmes},
+  date = {2020-09-01},
+  journaltitle = {Perspectives on Psychological Science},
+  shortjournal = {Perspect Psychol Sci},
+  volume = {15},
+  number = {5},
+  pages = {1243--1255},
+  publisher = {{SAGE Publications Inc}},
+  issn = {1745-6916},
+  doi = {10.1177/1745691620921521},
+  url = {https://doi.org/10.1177/1745691620921521},
+  urldate = {2021-01-29},
+  abstract = {Causal inference is a central goal of research. However, most psychologists refrain from explicitly addressing causal research questions and avoid drawing causal inference on the basis of nonexperimental evidence. We argue that this taboo against causal inference in nonexperimental psychology impairs study design and data analysis, holds back cumulative research, leads to a disconnect between original findings and how they are interpreted in subsequent work, and limits the relevance of nonexperimental psychology for policymaking. At the same time, the taboo does not prevent researchers from interpreting findings as causal effects\textemdash the inference is simply made implicitly, and assumptions remain unarticulated. Thus, we recommend that nonexperimental psychologists begin to talk openly about causal assumptions and causal effects. Only then can researchers take advantage of recent methodological advances in causal reasoning and analysis and develop a solid understanding of the underlying causal mechanisms that can inform future research, theory, and policymakers.},
+  langid = {english},
+  keywords = {causal inference,instrumental-variable estimation,nonexperimental,observational studies},
+}
+
+@Article{rohrerThinkingClearlyCorrelations2018,
+  title = {Thinking {{Clearly About Correlations}} and {{Causation}}: {{Graphical Causal Models}} for {{Observational Data}}},
+  shorttitle = {Thinking {{Clearly About Correlations}} and {{Causation}}},
+  author = {Julia M. Rohrer},
+  date = {2018-01-29},
+  journaltitle = {Advances in Methods and Practices in Psychological Science},
+  doi = {10.1177/2515245917745629},
+  url = {http://journals.sagepub.com/eprint/mpV35gbHH9zAw8Zn2wh7/full},
+  urldate = {2018-01-30},
+  abstract = {Correlation does not imply causation; but often, observational data are the only option, even though the research question at hand involves causality. This article discusses causal inference based on observational data, introducing readers to graphical causal models that can provide a powerful tool for thinking more clearly about the interrelations between variables. Topics covered include the rationale behind the statistical control of third variables, common procedures for statistical control, and what can go wrong during their implementation. Certain types of third variables\textemdash colliders and mediators\textemdash should not be controlled for because that can actually move the estimate of an association away from the value of the causal effect of interest. More subtle variations of such harmful control include using unrepresentative samples, which can undermine the validity of causal conclusions, and statistically controlling for mediators. Drawing valid causal inferences on the basis of observational data is not a me...},
+  langid = {english},
+  keywords = {Causal modeling,Directed acyclic graphs,Statistics},
+}
+
+@Article{vanderweeleCausalInferenceLongitudinal2016,
+  title = {Causal Inference and Longitudinal Data: A Case Study of Religion and Mental Health},
+  shorttitle = {Causal Inference and Longitudinal Data},
+  author = {Tyler J. VanderWeele and John W. Jackson and Shanshan Li},
+  date = {2016-11-01},
+  journaltitle = {Social Psychiatry and Psychiatric Epidemiology},
+  shortjournal = {Soc Psychiatry Psychiatr Epidemiol},
+  volume = {51},
+  number = {11},
+  pages = {1457--1466},
+  issn = {1433-9285},
+  doi = {10.1007/s00127-016-1281-9},
+  url = {https://doi.org/10.1007/s00127-016-1281-9},
+  urldate = {2021-06-10},
+  abstract = {We provide an introduction to causal inference with longitudinal data and discuss the complexities of analysis and interpretation when exposures can vary over time.},
+  langid = {english},
+}
+
+@Article{orbenSisypheanCycleTechnology2020,
+  title = {The {{Sisyphean Cycle}} of {{Technology Panics}}},
+  author = {Amy Orben},
+  date = {2020},
+  pages = {15},
+  abstract = {Widespread concerns about new technologies\textemdash whether they be novels, radios, or smartphones\textemdash are repeatedly found throughout history. Although tales of past panics are often met with amusement today, current concerns routinely engender large research investments and policy debate. What we learn from studying past technological panics, however, is that these investments are often inefficient and ineffective. What causes technological panics to repeatedly reincarnate? And why does research routinely fail to address them? To answer such questions, I examined the network of political, population, and academic factors driving the Sisyphean cycle of technology panics. In this cycle, psychologists are encouraged to spend time investigating new technologies, and how they affect children and young people, to calm a worried population. Their endeavor, however, is rendered ineffective because of the lack of a theoretical baseline; researchers cannot build on what has been learned researching past technologies of concern. Thus, academic study seemingly restarts for each new technology of interest, which slows down the policy interventions necessary to ensure technologies are benefiting society. In this article, I highlight how the Sisyphean cycle of technology panics stymies psychology's positive role in steering technological change and the pervasive need for improved research and policy approaches to new technologies.},
+  langid = {english},
+}
+
+@Online{appleIOS12Introduces2018,
+  title = {{{iOS}} 12 Introduces New Features to Reduce Interruptions and Manage {{Screen Time}}},
+  author = {{Apple}},
+  date = {2018},
+  url = {https://www.apple.com/uk/newsroom/2018/06/ios-12-introduces-new-features-to-reduce-interruptions-and-manage-screen-time/},
+  urldate = {2023-03-20},
+  abstract = {Apple today announced new tools built-in to iOS 12 to help customers take control of the time they spend interacting with their iOS devices.},
+  langid = {british},
+  organization = {{Apple Newsroom (United Kingdom)}},
+}
+
+@Online{googleDigitalWellbeingTechnology2022,
+  title = {Digital {{Wellbeing}} through Technology | {{Google}}},
+  author = {{Google}},
+  date = {2022},
+  url = {https://wellbeing.google/},
+  urldate = {2023-03-20},
+  abstract = {Google believes technology should play a helpful role in people's lives, and we're committed to helping everyone find a balance that feels right.},
+  langid = {english},
+  organization = {{Google Digital Wellbeing}},
+}
+
+@Online{metaNewToolsResources2022,
+  title = {New {{Tools}} and {{Resources}} for {{Parents}} and {{Teens}} in {{VR}} and on {{Instagram}}},
+  author = {{Meta}},
+  date = {2022-06-14T10:00:18+00:00},
+  url = {https://about.fb.com/news/2022/06/tools-for-parents-teens-vr-and-instagram/},
+  urldate = {2023-03-20},
+  abstract = {We're beginning to roll out Parent Dashboard on Quest and introducing new supervision tools on Instagram.},
+  langid = {american},
+  organization = {{Meta}},
+}
+
+@Online{tiktokDigitalWellbeing2021,
+  title = {Digital Well-Being},
+  author = {{TikTok}},
+  date = {2021-03-05T01:07:54+00:00},
+  url = {https://www.tiktok.com/safety/en/well-being/},
+  urldate = {2023-03-20},
+  abstract = {We are committed to giving you tools and resources to help you along your digital well-being journey, so you can find a balance that feels right for you.},
+  langid = {english},
+  organization = {{TikTok}},
+}
+
+@Online{departmentfordigitalculturemedia&sportGuideOnlineSafety2022,
+  title = {A Guide to the {{Online Safety Bill}}},
+  author = {Media \& Sport {Department for Digital Culture}},
+  date = {2022-12-16},
+  url = {https://www.gov.uk/guidance/a-guide-to-the-online-safety-bill},
+  urldate = {2023-03-20},
+  abstract = {The Online Safety Bill is a new set of laws to protect children and adults online. It will make social media companies more responsible for their users' safety on their platforms.},
+  langid = {english},
+  organization = {{GOV.UK}},
+}
+
+@Book{officeofthesurgeongeneralosgProtectingYouthMental2021,
+  title = {Protecting {{Youth Mental Health}}: {{The U}}.{{S}}. {{Surgeon General}}'s {{Advisory}}},
+  shorttitle = {Protecting {{Youth Mental Health}}},
+  author = {{Office of the Surgeon General (OSG)}},
+  date = {2021},
+  series = {Publications and {{Reports}} of the {{Surgeon General}}},
+  eprint = {34982518},
+  eprinttype = {pmid},
+  publisher = {{US Department of Health and Human Services}},
+  location = {{Washington (DC)}},
+  url = {http://www.ncbi.nlm.nih.gov/books/NBK575984/},
+  urldate = {2023-03-20},
+  abstract = {During the pandemic, children, adolescents, and young adults have faced unprecedented challenges. The COVID-19 pandemic has dramatically changed their world, including how they attend school, interact with friends, and receive health care. They missed first days of school, months or even years of in-person schooling, graduation ceremonies, sports competitions, playdates, and time with relatives. They and their family may have lost access to mental health care, social services, income, food, or housing.41 They may have had COVID-19 themselves, suffered from long COVID symptoms, or lost a loved one to the disease\textemdash it's estimated that as of June 2021, more than 140,000 children in the US had lost a parent or grandparent caregiver to COVID-19. Since the pandemic began, rates of psychological distress among young people, including symptoms of anxiety, depression, and other mental health disorders, have increased. Recent research covering 80,000 youth globally found that depressive and anxiety symptoms doubled during the pandemic, with 25\% of youth experiencing depressive symptoms and 20\% experiencing anxiety symptoms. Negative emotions or behaviors such as impulsivity and irritability\textemdash associated with conditions such as ADHD\textemdash{} appear to have moderately increased. Early clinical data are also concerning: In early 2021, emergency department visits in the United States for suspected suicide attempts were 51\% higher for adolescent girls and 4\% higher for adolescent boys compared to the same time period in early 2019. Moreover, pandemic-related measures reduced in-person interactions among children, friends, social supports, and professionals such as teachers, school counselors, pediatricians, and child welfare workers. This made it harder to recognize signs of child abuse, mental health concerns, and other challenges. During the pandemic, young people also experienced other challenges that may have affected their mental and emotional wellbeing: the national reckoning over the deaths of Black Americans at the hands of police officers, including the murder of George Floyd; COVID-related violence against Asian Americans; gun violence; an increasingly polarized political dialogue; growing concerns about climate change; and emotionally-charged misinformation.},
+  langid = {english},
+}
+
+@Article{appelAreSocialMedia2020,
+  title = {Are {{Social Media Ruining Our Lives}}? {{A Review}} of {{Meta-Analytic Evidence}}},
+  shorttitle = {Are {{Social Media Ruining Our Lives}}?},
+  author = {Markus Appel and Caroline Marker and Timo Gnambs},
+  date = {2020-03},
+  journaltitle = {Review of General Psychology},
+  shortjournal = {Review of General Psychology},
+  volume = {24},
+  number = {1},
+  pages = {60--74},
+  issn = {1089-2680, 1939-1552},
+  doi = {10.1177/1089268019880891},
+  url = {http://journals.sagepub.com/doi/10.1177/1089268019880891},
+  urldate = {2022-01-10},
+  abstract = {A growing number of studies have examined the psychological corollaries of using social networking sites (SNSs) such as Facebook, Instagram, or Twitter (often called social media). The interdisciplinary research area and conflicting evidence from primary studies complicate the assessment of current scholarly knowledge in this field of high public attention. We review meta-analytic evidence on three hotly debated topics regarding the effects of SNSs: well-being, academic achievement, and narcissism. Meta-analyses from different laboratories draw a rather equivocal picture. They show small associations in the r = .10 range between the intensity of SNS use and loneliness, self-esteem, life satisfaction, or selfreported depression, and somewhat stronger links to a thin body ideal and higher social capital. There is no indication for potential devastating effects of social media on school achievement; social media use and school grades are unrelated for adolescents. The meta-analyses revealed small to moderate associations between narcissism and SNS use. In sum, metaanalytic evidence is not in support of dramatic claims relating social media use to mischief.},
+  langid = {english},
+}
+
+@Article{bestOnlineCommunicationSocial2014,
+  title = {Online Communication, Social Media and Adolescent Wellbeing: {{A}} Systematic Narrative Review},
+  shorttitle = {Online Communication, Social Media and Adolescent Wellbeing},
+  author = {Paul Best and Roger Manktelow and Brian Taylor},
+  date = {2014-06},
+  journaltitle = {Children and Youth Services Review},
+  shortjournal = {Children and Youth Services Review},
+  volume = {41},
+  pages = {27--36},
+  issn = {01907409},
+  doi = {10.1016/j.childyouth.2014.03.001},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S0190740914000693},
+  urldate = {2022-01-10},
+  abstract = {Background: Much debate and polarisation exist regarding the impact of online social technologies on the mental wellbeing of young people. Objective: To systematically review and synthesise current empirical research on this topic, identifying both the beneficial and harmful effects of online communication and social media technology amongst young people. Methods: A systematic narrative review of research published between January 2003 and April 2013, retrieved using rigorous searching on eight bibliographic databases. Results were then subject to review using a quality appraisal tool and a narrative synthesis methodology. A theoretical framework was developed for the synthesis using concepts from mental health and communication studies literature. Results: Systematic searching retrieved 43 original research papers investigating or exploring the effects of online technologies on adolescent mental well-being or related concept(s). The benefits of using online technologies were reported as increased self-esteem, perceived social support, increased social capital, safe identity experimentation and increased opportunity for self-disclosure. Harmful effects were reported as increased exposure to harm, social isolation, depression and cyber-bullying. The majority of studies reported either mixed or no effect(s) of online social technologies on adolescent wellbeing. Conclusions: This systematic narrative review has revealed contradictory evidence while revealing an absence of robust causal research regarding the impact of social media on mental wellbeing of young people. Online technologies are increasingly being used for health and social care purposes, but further research is required to give confidence that these are appropriately designed to promote the mental health care and support of young people.},
+  langid = {english},
+}
+
+@Article{dickson2018screen,
+  title = {Screen-Based Activities and Children and Young People's Mental Health and Psychosocial Wellbeing: A Systematic Map of Reviews},
+  author = {Kelly Dickson and Michelle Richardson and Irene Kwan and Wendy MacDowall and Helen Burchett and Claire Stansfield and Ginny Brunton and Katy Sutcliffe and James Thomas},
+  date = {2019},
+  publisher = {{EPPI-Centre, UCL Institute of Education, University College London}},
+}
+
+@Article{ghaiLackSampleDiversity2021,
+  title = {Lack of Sample Diversity in Research on Adolescent Depression and Social Media Use: A Scoping Review and Meta-Analysis},
+  shorttitle = {Lack of Sample Diversity in Research on Adolescent Depression and Social Media Use},
+  author = {Sakshi Ghai and Luisa Fassi and Faisal Awadh and Amy Orben},
+  date = {2021-12-03T18:21:42},
+  publisher = {{PsyArXiv}},
+  doi = {10.31234/osf.io/s7juz},
+  url = {https://psyarxiv.com/s7juz/},
+  urldate = {2021-12-09},
+  abstract = {Research on whether social media use relates to adolescent depression is rapidly increasing. However, is it adequately representing the diversity of global adolescent populations? We conducted a pre-registered scoping review (research published between 2018-2020; 34 articles) to investigate the proportion of studies recruiting samples from the Global North vs. Global South and assess whether the association between social media and depression varies depending on the population being studied. Sample diversity was lacking between regions: 70\% of studies examined Global North populations. The link between social media and depression was positive and significant in the Global North but null and non-significant in the Global South. There was also little evidence of diversity within regions in both sampling choices and reporting of participants' demographics. Given that most adolescents live in the Global South and sample diversity is crucial for the generalisability of research findings, urgent action is needed to address these oversights.},
+  langid = {american},
+  keywords = {Adolescence,adolescents,Clinical Psychology,Cross-cultural Psychology,Cultural Psychology,depression,Depressive Disorders,Developmental Psychology,diverse research,Global North,Global South,Meta-science,sample diversity,Social and Behavioral Sciences,social media},
+}
+
+@Online{ituITUICTStatistics2021,
+  title = {{{ITU ICT Statistics}}},
+  author = {{ITU}},
+  date = {2021},
+  url = {https://www.itu.int:443/en/ITU-D/Statistics/Pages/stat/default.aspx},
+  urldate = {2021-10-27},
+  langid = {american},
+  organization = {{ITU ICT Statistics}},
+  keywords = {\#nosource},
+}
+
+@Article{ghaiSocialMediaAdolescent2022,
+  title = {Social Media and Adolescent Well-Being in the {{Global South}}},
+  author = {Sakshi Ghai and Luc\'ia Magis-Weinberg and Mariya Stoilova and Sonia Livingstone and Amy Orben},
+  date = {2022-08-01},
+  journaltitle = {Current Opinion in Psychology},
+  shortjournal = {Current Opinion in Psychology},
+  volume = {46},
+  pages = {101318},
+  issn = {2352-250X},
+  doi = {10.1016/j.copsyc.2022.101318},
+  url = {https://www.sciencedirect.com/science/article/pii/S2352250X22000288},
+  urldate = {2022-08-22},
+  abstract = {Despite the rapid proliferation of digital technologies in the Global South, most academic research on social media and adolescent well-being has primarily focused on the Global North. This review investigates how social media impacts adolescent well-being in the Global South. We first review five regions (Sub-Saharan Africa, Middle East \& North Africa, Latin America, China and South \& South-East Asia) to highlight the complex ways social media interacts with well-being around the world. We then outline research gaps in the current understanding of the impacts of social media use on adolescent populations in diverse cultural contexts. We finally highlight potential lines of inquiry that future researchers could explore to build a nuanced, contextual perspective of the risks and opportunities of social media use.},
+  langid = {english},
+  keywords = {Adolescent well-being,Cross-cultural psychology,Global South,Social media},
+}
+
+@Online{byrneGlobalKidsOnline2016,
+  title = {Global {{Kids Online}}: {{Research}} Synthesis},
+  shorttitle = {Global {{Kids Online}}},
+  author = {Jasmine Byrne and Daniel Kardefelt-Winther and Sonia Livingstone and Mariya Stoilova},
+  date = {2016},
+  url = {http://globalkidsonline.net/synthesis-report/},
+  urldate = {2023-03-20},
+  abstract = {This report offers a synthesis of Global Kids Online's work from 2015-2016 and is designed to be of interest to researchers and research users. The report},
+  langid = {american},
+}
+
+@Article{inchleyEnhancingUnderstandingAdolescent2020,
+  title = {Enhancing {{Understanding}} of {{Adolescent Health}} and {{Well-Being}}: {{The Health Behaviour}} in {{School-aged Children Study}}},
+  shorttitle = {Enhancing {{Understanding}} of {{Adolescent Health}} and {{Well-Being}}},
+  author = {Joanna C. Inchley and Gonneke W. J. M. Stevens and Oddrun Samdal and Dorothy B. Currie},
+  date = {2020-06-01},
+  journaltitle = {Journal of Adolescent Health},
+  shortjournal = {Journal of Adolescent Health},
+  volume = {66},
+  number = {6},
+  eprint = {32446607},
+  eprinttype = {pmid},
+  pages = {S3-S5},
+  publisher = {{Elsevier}},
+  issn = {1054-139X, 1879-1972},
+  doi = {10.1016/j.jadohealth.2020.03.014},
+  url = {https://www.jahonline.org/article/S1054-139X(20)30129-4/fulltext},
+  urldate = {2023-03-20},
+  langid = {english},
+}
+
+@Online{oecdPISA2018Technical2018,
+  title = {{{PISA}} 2018 {{Technical Report}} - {{PISA}}},
+  author = {{OECD}},
+  date = {2018},
+  url = {https://www.oecd.org/pisa/data/pisa2018technicalreport/},
+  urldate = {2023-03-20},
+  abstract = {Detailed descriptions of the implementation of the OECD's 2018 PISA surveys in 79 countries and economies.},
+  langid = {english},
+}
+
+@article{wu-ouyangOverestimatingUnderestimatingCommunication2022,
+  title = {Overestimating or Underestimating Communication Findings? {{Comparing}} Self-Reported with Log Mobile Data by Data Donation Method},
+  shorttitle = {Overestimating or Underestimating Communication Findings?},
+  author = {Wu-Ouyang, Biying and Chan, Michael},
+  date = {2022-11-25},
+  journaltitle = {Mobile Media \& Communication},
+  pages = {20501579221137162},
+  publisher = {{SAGE Publications}},
+  issn = {2050-1579},
+  doi = {10.1177/20501579221137162},
+  url = {https://doi.org/10.1177/20501579221137162},
+  urldate = {2022-11-30},
+  abstract = {Mobile phone usage is typically measured via self-reporting. However, scholars have questioned the validity of self-reported data, which may lead to Type I or Type II errors. Using an online survey (n?=?777), this study compared self-reported and log mobile phone usage data using a simplified version of the mobile data donation method. The results showed that people generally underreported their mobile phone usage in terms of time duration, the number of notifications, and apps used. Moreover, self-reported data may either have no additional effect on or overestimate the communication findings depending on the outcome variables. This challenges the Type II error explanation and suggests that the effect sizes of self-reported data might not be underestimated after all. Instead, past research examining mobile use and pertinent outcomes may have false-positive findings and Type I errors. Given the potential inaccuracies of self-reported data, future research on mobile media and communications should go beyond self-reported data to enhance the validity of findings.},
+  langid = {english}
 }
